creo la estructura de la pantalla

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
     <div class="main">
         <div class="top">
-            <div class="borderscreen">
-                <div class="bordertop"></div>
-                <div class="borderright"></div>
-                <div class="borderbottom"></div>
-                <div class="borderleft"></div>
-                <div class="screen"></div>
+            <div class="borderScreen">
+                <div class="borderRight"></div>
+                <div class="center">
+                    <div class="borderTop"></div>
+                    <div class="screen"></div>
+                    <div class="borderBottom"></div>
+                </div>
+                <div class="borderLeft"></div>
             </div>
 
         </div>
@@ -23,8 +25,7 @@
 
         </div>
         <div class="bottom">
-            <div class="bottomTop"></div>
-            <div class="curve"></div>
+
         </div>
         
     </div>
