creo la estructura básica del medio

--- a/index.html
+++ b/index.html
@@ -19,12 +19,22 @@
                 </div>
                 <div class="borderLeft"></div>
             </div>
-
         </div>
         <div class="middle">
-
+            <div class="cross"></div>
+            <div class="emptyMiddle"></div>
+            <div class="circularButton1"></div>
+            <div class="emptyRight"></div>
+            <div class="circularButton2"></div>
+            <div class="emptyRight"></div>
         </div>
         <div class="bottom">
+            <div class="emptyLeft"></div>
+            <div class="bottomMiddle">
+                <div class="ovalButton"></div>
+                <div class="emptyBottom"></div>
+            <div class="dots"></div>
+            
 
         </div>
         
