creo la estructura básica de la parte inferior

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <div class="bottomMiddle">
                 <div class="ovalButton"></div>
                 <div class="emptyBottom"></div>
+            </div>
             <div class="dots"></div>
             
-
         </div>
         
     </div>
