--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="main">
+
         <div class="top">
             <div class="borderScreen">
                 <div class="borderRight"></div>
@@ -20,6 +21,11 @@
                 <div class="borderLeft"></div>
             </div>
         </div>
+
+        <div class="logo">
+            <div class="nintendo">Nintendoº</div>
+        </div>
+
         <div class="middle">
             <div class="cross"></div>
             <div class="emptyMiddle"></div>
@@ -28,6 +34,7 @@
             <div class="circularButton2"></div>
             <div class="emptyRight"></div>
         </div>
+
         <div class="bottom">
             <div class="emptyLeft"></div>
             <div class="bottomMiddle">
