añado los botones de select y start

--- a/index.html
+++ b/index.html
@@ -38,7 +38,16 @@
         <div class="bottom">
             <div class="emptyLeft"></div>
             <div class="bottomMiddle">
-                <div class="ovalButton"></div>
+                <div class="ovalButtons">
+                    <div class="ovalButton1">
+                        <div class="selectButton"></div>
+                        <div class="selectText">SELECT</div>
+                    </div>
+                    <div class="ovalButton2">
+                        <div class="startButton"></div>
+                        <div class="startText">START</div>
+                    </div>
+                </div>
                 <div class="emptyBottom"></div>
             </div>
             <div class="dots"></div>
