añado los botones en cruz

--- a/index.html
+++ b/index.html
@@ -27,7 +27,20 @@
         </div>
 
         <div class="middle">
-            <div class="cross"></div>
+            <div class="aroundCross">
+                <div class="cross">
+                    <div class="white"></div>
+                    <div class="black">▲</div>
+                    <div class="white"></div>
+                    <div class="black">◀</div>
+                    <div class="black">⬤</div>
+                    <div class="black">▶</div>
+                    <div class="white"></div>
+                    <div class="black">▼</div>
+                    <div class="white"></div>
+                </div>
+            </div>
+
             <div class="emptyMiddle"></div>
             <div class="circularButton1"></div>
             <div class="emptyRight"></div>
