añado los botones A y B y quito los colores que utilizaba de guia

--- a/index.html
+++ b/index.html
@@ -42,9 +42,13 @@
             </div>
 
             <div class="emptyMiddle"></div>
-            <div class="circularButton1"></div>
+            <div class="aroundButtonB">
+                <div class="buttonB">B</div>
+            </div>
             <div class="emptyRight"></div>
-            <div class="circularButton2"></div>
+            <div class="aroundButtonA">
+                <div class="buttonA">A</div>
+            </div>
             <div class="emptyRight"></div>
         </div>
 
@@ -61,7 +65,7 @@
                         <div class="startText">START</div>
                     </div>
                 </div>
-                <div class="emptyBottom"></div>
+    
             </div>
             <div class="dots"></div>
             
