cambio la estructura de la pantalla y añado la curva

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
         <div class="top">
             <div class="borderScreen">
-                <div class="borderRight"></div>
+                <div class="borderTop"></div>
                 <div class="center">
-                    <div class="borderTop"></div>
+                    <div class="borderRight"></div>
                     <div class="screen"></div>
-                    <div class="borderBottom"></div>
+                    <div class="borderLeft"></div>
                 </div>
-                <div class="borderLeft"></div>
+                <div class="borderBottom"></div>
             </div>
         </div>
 
@@ -146,6 +146,7 @@
         </div>
         
     </div>
+    <script src="./js/main.js"> </script>
 </body>
 </html>
 
