añado algunas sombras y el logo de Game Boy

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
                     <div class="screen"></div>
                     <div class="borderLeft"></div>
                 </div>
-                <div class="borderBottom"></div>
+                <div class="borderBottom">
+                    <div class="color"></div>
+                </div>
             </div>
         </div>
 
@@ -30,13 +32,13 @@
             <div class="aroundCross">
                 <div class="cross">
                     <div class="empty"></div>
-                    <div class="arrow">▲</div>
+                    <div class="arrow arrowTop">▲</div>
                     <div class="empty"></div>
-                    <div class="arrow">◀</div>
+                    <div class="arrow arrowLeft">◀</div>
                     <div class="arrow">⬤</div>
-                    <div class="arrow">▶</div>
+                    <div class="arrow arrowRight">▶</div>
                     <div class="empty"></div>
-                    <div class="arrow">▼</div>
+                    <div class="arrow arrowBottom">▼</div>
                     <div class="empty"></div>
                 </div>
             </div>
