añado javascrip para que al apretar el botón start se encienda la pantalla

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="borderTop"></div>
                 <div class="center">
                     <div class="borderRight"></div>
-                    <div class="screen"></div>
+                    <div class="screen" id="screenOn"></div>
                     <div class="borderLeft"></div>
                 </div>
                 <div class="borderBottom">
@@ -63,7 +63,7 @@
                         <div class="selectText">SELECT</div>
                     </div>
                     <div class="ovalButton2">
-                        <div class="startButton"></div>
+                        <div class="startButton" onclick="encenderPantalla()"></div>
                         <div class="startText">START</div>
                     </div>
                 </div>
