añado javascrip para que al apretar el botón select se convierta transparente

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    <div class="main">
+    <div class="main"id=noColour>
 
         <div class="top">
             <div class="borderScreen">
@@ -59,11 +59,11 @@
             <div class="bottomMiddle">
                 <div class="ovalButtons">
                     <div class="ovalButton1">
-                        <div class="selectButton"></div>
+                        <div class="selectButton" onclick="transparent()"></div>
                         <div class="selectText">SELECT</div>
                     </div>
                     <div class="ovalButton2">
-                        <div class="startButton" onclick="encenderPantalla()"></div>
+                        <div class="startButton" onclick="turnScreenOn()"></div>
                         <div class="startText">START</div>
                     </div>
                 </div>
