añado los divs de luz de encendido y de power

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
             <div class="borderScreen">
                 <div class="borderTop"></div>
                 <div class="center">
-                    <div class="borderRight"></div>
+                    <div class="borderRight">
+                        <div class="redLight"></div>
+                        <div class="halfCircle">◗◗◗</div>
+                        <div class="power">POWER</div>
+                    </div>
                     <div class="screen" id="screenOn"></div>
                     <div class="borderLeft"></div>
                 </div>
